# ros_training_exercises

./: .clang-format  README.md
buzzsim/: CMakeLists.txt  package.xml
buzzsim/include/buzzsim/: frame.h  motion.h  turtle.h  world.h  world_config_parser.h
buzzsim/include/buzzsim/sensors/: cgal_types.h  lidar.h
buzzsim/src/buzzsim/: frame.cpp  motion.cpp  obstacle_parser.cpp  turtle.cpp  world.cpp  world_config_parser.cpp
buzzsim/src/buzzsim/sensors/: lidar.cpp
igvc_training_exercises/: CMakeLists.txt  package.xml
igvc_training_exercises/cmake/: FindG2O.cmake
igvc_training_exercises/config/week1/: world.yml
igvc_training_exercises/config/week4/: world.yml
igvc_training_exercises/config/week5/: world.yml
igvc_training_exercises/config/week6/: world.yml
igvc_training_exercises/config/week_slam/: world.yml
igvc_training_exercises/include/week_slam/: barrel_ransac.h  landmark_registration.h  slam_node.h
igvc_training_exercises/include/week_slam/g2o/: IMU_measurement.h  edge_point_on_circle.h  landmark_measurement.h  state_vertices.h  twist.h
igvc_training_exercises/include/week_slam/g2o/edge/: edge_holonomic.h  edge_imu.h  edge_landmark.h
igvc_training_exercises/include/week_slam/g2o/vertex/: vertex_timestamp.h  vertex_twist.h
igvc_training_exercises/launch/: week1.launch  week3.launch  week4.launch  week5.launch  week6.launch  week_scanmatching.launch  week_slam.launch
igvc_training_exercises/src/week1/: CMakeLists.txt  main.cpp  world_setup.cpp
igvc_training_exercises/src/week2/: CMakeLists.txt  main.cpp  publisher.cpp  subscriber.cpp
igvc_training_exercises/src/week2/exercises/: string_subscriber.cpp
igvc_training_exercises/src/week3/: CMakeLists.txt  main.cpp  world_setup.cpp
igvc_training_exercises/src/week4/: CMakeLists.txt  main.cpp  world_setup.cpp
igvc_training_exercises/src/week5/: main.cpp
igvc_training_exercises/src/week6/: main.cpp
igvc_training_exercises/src/week_scanmatching/: CMakeLists.txt  main.cpp
igvc_training_exercises/src/week_scanmatching/icp/: icp.cpp
igvc_training_exercises/src/week_slam/: CMakeLists.txt  barrel_ransac.cpp  landmark_registration.cpp  main.cpp  slam_node.cpp
igvc_training_exercises/src/week_slam/g2o/: edge_point_on_circle.cpp  landmark_measurement.cpp  vertex_circle.cpp
igvc_training_exercises/src/week_slam/g2o/edge/: edge_holonomic.cpp  edge_imu.cpp  edge_landmark.cpp
igvc_training_exercises/src/week_slam/g2o/vertex/: vertex_twist.cpp
igvc_training_msgs/: CMakeLists.txt  package.xml
instructions/: introduction.md  week1.md  week2.md  week3.md  week4.md  week5.md
